# light-email-filter

./: Makefile.am  README.md  acsite.m4  configure.in  example.conf
proxsmtp/: .gitignore  AUTHORS  Makefile.am  NEWS  README  configure.in  freshmeat.rel
proxsmtp/common/: compat.c  compat.h  smtppass.c  smtppass.h  sock_any.c  sock_any.h  spio.c  sppriv.h  stringx.c  stringx.h  usuals.h
proxsmtp/doc/: .cvsignore  proxsmtpd.8  proxsmtpd.conf  proxsmtpd.conf.5
proxsmtp/scripts/: add_header.sh  proxsmtpd.sh  spamassassin.sh
proxsmtp/src/: .cvsignore  proxsmtpd.c  proxsmtpd.h
src/: Makefile.am  lefilter.c
